Fri Mar 30 13:55:00 UTC 2012  Simon Massey  <simon dot massey at prismtech dot com>

        * tao/Compression/Compression_Manager.h:
          Methods should all be public (being virtual they were public in base and
          were all callable anyway). Removes some annoying warnings.

Wed Mar 28 16:43:00 UTC 2012  Simon Massey  <simon dot massey at prismtech dot com>

        * tao/ZIOP/ZIOP.cpp:
          Correct the debug string %d does not display a float value well. Also
          correct the maths a bit concerning other uses of ::Compression::CompressionRatio.

Wed Mar 28 12:12:00 UTC 2012  Simon Massey  <simon dot massey at prismtech dot com>

        * tests/ZIOP/Hello.cpp:
        * tests/ZIOP/client.cpp:
          Initialise all bytes being send by client and server and ensure they will
          readily compress. Valgrind kept reporting that there were unitialized
          bytes being compressed, the client didn't initialise it's big request
          octet sequence, and Hello.cpp was being too complex in it's initalization
          of Big_reply, leaving holes in it's octet sequence init.

Wed Mar 28 10:40:00 UTC 2012  Simon Massey  <simon dot massey at prismtech dot com>

        * tests/ZIOP/client.cpp:
          Correct the test of the contents of the var, use .in() not ._retn() in
          strstr() call; test was leaking.

Tue Mar 27 15:53:00 UTC 2012  Simon Massey  <simon dot massey at prismtech dot com>

        * tests/ZIOP/client.cpp:
          compression_manager->get_compressor () needs to be stored in a
          ::Compression::Compressor_var as it is reference counted.

Tue Mar 27 14:50:00 UTC 2012  Simon Massey  <simon dot massey at prismtech dot com>

        * tao/Compression/Base_Compressor.cpp:
        * tao/Compression/Base_Compressor.h:
          compressor_factory_ should not be a var just a pointer. Each compressor is
          passed in the "this" pointer of the factory that created it (which holds